refactor getActiveWedding to include file; add message class to css; module add fixed; add getId to class Wedding;

--- a/trunk/wedding2/WebContent/css/main.css
+++ b/trunk/wedding2/WebContent/css/main.css
@@ -56,3 +56,11 @@ body {
 	padding-right: 6px;
 }
 
+.message {
+	background-color: rgb(255, 156, 221);
+	padding: 3px;
+	border: red 2px solid;
+	margin: 5px 0px;
+	font-weight: bold;
+}
+
