--- a/trunk/wedding2/WebContent/css/main.css
+++ b/trunk/wedding2/WebContent/css/main.css
@@ -61,6 +61,10 @@ body {
 	border-right: 1px lightgray dashed;
 }
 
+.listview th.sortable {
+		cursor: pointer;
+} 
+
 .form {
 	border-spacing: 3px;
 	border-collapse: collapse;
