--- a/wedding2/WebContent/css/main.css
+++ b/wedding2/WebContent/css/main.css
@@ -34,7 +34,7 @@ body {
 	height: 100px;
 	width: 100%;
 	clear: both;
-	background-color: rgb(255, 128, 128);
+	background-color: #f28bbd);
 }
 
 #footer {
