--- a/wedding2/WebContent/css/main.css
+++ b/wedding2/WebContent/css/main.css
@@ -54,9 +54,14 @@ body {
 	text-align: left;
 }
 
+.listview td {
+	background-color: #f0f0f0;
+	text-align: right;
+}
+
 .listview td, .listview th {
-	padding-left: 2px;
-	padding-right: 2px;
+	padding-left: 3px;
+	padding-right: 3px;
 	border-left: 1px lightgray dashed;
 	border-right: 1px lightgray dashed;
 }
